# Project-1-Excelr

./: README.md  main.py  pyproject.toml  requirements.txt
Divya/: Online_Course_Recommendation_System (2).ipynb
Files/: P677_Business_Objective.docx
Group 2 project folder/: main.ipynb
Notes/: Notes.md  notes.ipynb
project files/: main.ipynb  model.pkl  scaler.pkl
project_files/: app.py  main.ipynb  tfidf.pkl
temp_folders/: temp.ipynb
