[project]
name = "excelar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.0.0",
    "joblib>=1.3.0",
    "jupyterlab>=4.0.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.14.0",
    "torch>=2.1.0",
    "xgboost>=1.7.0",
]
